# rust_guitar_tab_server

./: Cargo.toml  README.md
css/: styles.css
db/: docker-compose.yaml
html/: 404.html  home.html  list.html  login.html  new_tab.html  register.html  tab.html
js/: list.js  login.js  logout.js  new_tab.js  register.js  tab.js
migrations/: 0001_tabs.sql
src/: main.rs
src/db/: db_handler.rs  db_handling.rs  mod.rs
src/models/: tab.rs
src/server/: mod.rs  router.rs  routes.rs  server.rs  thread_pool.rs
